# Deadwave

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: consts.hpp  engine.cpp  engine.hpp
engine/entity/: entity.hpp
engine/scene/: scene.hpp  scene_manager.cpp  scene_manager.hpp
engine/ui/: button.hpp  text.hpp
entities/: entities.hpp
entities/player/: player.cpp  player.hpp
entities/spawner/: spawner.cpp  spawner.hpp
entities/zombie/: zombie.cpp  zombie.hpp
scenes/: game_scene.hpp  menu_scene.hpp
utils/: utils.hpp
